--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,7 @@
 version: "3.7"
 services:
-
-    #airflow
     airflow-webserver:
-        image: airflow-spark:1.0
+        build: ./docker-airflow
         container_name: airflow
         restart: always
         networks:
@@ -27,60 +25,60 @@ services:
             interval: 30s
             timeout: 30s
             retries: 3
-    # postgres
-    postgres:
-        build: ./docker-postgres
-        container_name: postgres
-        user: root
-        networks:
-            - default_net
-        environment:
-            - POSTGRES_USER=airflow
-            - POSTGRES_PASSWORD=airflow
-            - POSTGRES_DB=airflow
-            - SERVICE_DB=service
-        ports:
-            - "5439:5432"
-    #Jupyter notebook
-    spark:
-        image: bitnami/spark:3.0.1
-        user: root # Run container as root container: https://docs.bitnami.com/tutorials/work-with-non-root-containers/
-        hostname: spark
-        networks:
-            - default_net
-        environment:
-            - SPARK_MODE=master
-            - SPARK_RPC_AUTHENTICATION_ENABLED=no
-            - SPARK_RPC_ENCRYPTION_ENABLED=no
-            - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
-            - SPARK_SSL_ENABLED=no
-        ports:
-            - "8181:8080"
-            - "7077:7077"
+        postgres:
+            build: ./docker-postgres
+            container_name: postgres
+            user: root
+            networks:
+                - default_net
+            environment:
+                - POSTGRES_USER=airflow
+                - POSTGRES_PASSWORD=airflow
+                - POSTGRES_DB=airflow
+                - SERVICE_DB=service
+            ports:
+                - "5439:5432"
+        spark:
+            image: bitnami/spark:3.0.1
+            user: root # Run container as root container: https://docs.bitnami.com/tutorials/work-with-non-root-containers/
+            hostname: spark
+            networks:
+                - default_net
+            environment:
+                - SPARK_MODE=master
+                - SPARK_RPC_AUTHENTICATION_ENABLED=no
+                - SPARK_RPC_ENCRYPTION_ENABLED=no
+                - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
+                - SPARK_SSL_ENABLED=no
+            ports:
+                - "8181:8080"
+                - "7077:7077"
 
-    spark-worker-1:
-        image: bitnami/spark:3.0.1
-        user: root
-        networks:
-            - default_net
-        environment:
-            - SPARK_MODE=worker
-            - SPARK_MASTER_URL=spark://spark:7077
-            - SPARK_WORKER_MEMORY=4G
-            - SPARK_WORKER_CORES=1
-            - SPARK_RPC_AUTHENTICATION_ENABLED=no
-            - SPARK_RPC_ENCRYPTION_ENABLED=no
-            - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
-            - SPARK_SSL_ENABLED=no
+        spark-worker-1:
+            image: bitnami/spark:3.0.1
+            user: root
+            networks:
+                - default_net
+            environment:
+                - SPARK_MODE=worker
+                - SPARK_MASTER_URL=spark://spark:7077
+                - SPARK_WORKER_MEMORY=4G
+                - SPARK_WORKER_CORES=1
+                - SPARK_RPC_AUTHENTICATION_ENABLED=no
+                - SPARK_RPC_ENCRYPTION_ENABLED=no
+                - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
+                - SPARK_SSL_ENABLED=no
 
-    zeppelin:
-        image: apache/zeppelin:0.9.0
-        ports:
-            - "8080:8080"
-        volumes:
-            - ./notebook:/opt/zeppelin/notebook
-        environment:
-            - ZEPPELIN_NOTEBOOK_DIR=notebook
-            - ZEPPELIN_LOG_DIR=logs
+        zeppelin:
+            image: apache/zeppelin:0.9.0
+            networks:
+                - default_net
+            ports:
+                - "8080:8080"
+            volumes:
+                - ./notebook:/opt/zeppelin/notebook
+            environment:
+                - ZEPPELIN_NOTEBOOK_DIR=notebook
+                - ZEPPELIN_LOG_DIR=logs
 networks:
     default_net:
